fix: 🐛 change css of select coin for browser's dark mode
change css of select coin for browser's dark mode

--- a/src/app/common/components/coin-input/select/coin-select.page.scss
+++ b/src/app/common/components/coin-input/select/coin-select.page.scss
@@ -3,9 +3,6 @@
   height: 40px;
 }
 
-.select-content {
-  width: 100%;
-}
 .title {
   margin-top: 26px;
   height: 41px;
