--- a/src/global.scss
+++ b/src/global.scss
@@ -337,3 +337,12 @@ ion-toggle {
   font-size: 13px !important;
   color: #ff3b30;
 }
+
+.select-content {
+  width: 100%;
+  background: white;
+}
+
+.first-row {
+  border-top: 1px solid #e9e9e9;
+}
